<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_swordman"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/swordman" />
        <item
            android:id="@+id/nav_enchanter"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/enchanter" />
        <item
            android:id="@+id/nav_sagittary"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/sagittary" />
        <item
            android:id="@+id/nav_m_swordman"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/m_swordman" />
        <item
            android:id="@+id/nav_mentor"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/holy_mentor" />
        <item
            android:id="@+id/nav_kael"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/kael" />
        <item
            android:id="@+id/nav_brawler"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/brawler" />
        <item
            android:id="@+id/nav_man_of_La_mancha"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/man_of_La_mancha" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
